force-app/main/default/objects/Conduit_CMM__c/Conduit_CMM__c.object-meta.xml
<CustomObject>
    <label>Conduit CMM</label>
    <nameField>
        <displayFormat>CMM-{0000}</displayFormat>
        <label>Conduit CMM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conduit CMMs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>