force-app/main/default/objects/Conduit_CMM__c/fields/Assessment_Request__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Request__c</fullName>
    <label>Assessment Request</label>
    <referenceTo>GTM_Assessment_Request__c</referenceTo>
    <relationshipLabel>Conduit CMMs</relationshipLabel>
    <relationshipName>Conduit_CMMs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>