force-app/main/default/objects/Conduit_CMM__c/fields/Cmm_Content_Doc_Id__c.field-meta.xml
<CustomField>
    <fullName>Cmm_Content_Doc_Id__c</fullName>
    <label>Assembled CMM ContentDocument Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>