force-app/main/default/objects/Conduit_CMM__c/fields/Object_Counts__c.field-meta.xml
<CustomField>
    <fullName>Object_Counts__c</fullName>
    <label>Object Counts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>