force-app/main/default/objects/Conduit_CMM__c/fields/Raw_Zip_Content_Doc_Id__c.field-meta.xml
<CustomField>
    <fullName>Raw_Zip_Content_Doc_Id__c</fullName>
    <label>Raw Zip ContentDocument Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>