force-app/main/default/objects/Conduit_CMM__c/fields/Uploaded_At__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_At__c</fullName>
    <label>Uploaded At</label>
    <type>DateTime</type>
</CustomField>