force-app/main/default/objects/Conduit_CMM__c/fields/Uploaded_By__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Uploaded By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Conduit CMMs (Uploaded By)</relationshipLabel>
    <relationshipName>Conduit_CMMs_Uploaded</relationshipName>
    <type>Lookup</type>
</CustomField>